--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apollo-boost": "^0.4.9",
+    "apollo-link": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
     "graphql": "^14.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
